test/valid/record.js
var o = { x: 1, y: 2};
function f(t) { return t.x; }
f(o);
